net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/NetworkInterfaceTests/NetworkInterfaceNetworkSecurityGroupTest[2021-04-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-a10dc01b0db973647c928828e636f6d7-f04a61443a07041f-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "d3a1d78eacd9ed23c5b063646ac5c56c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:06 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "359012b1-4e5b-41e0-806a-8ad70e7dc900",
        "x-ms-ratelimit-remaining-subscription-reads": "10943",
        "x-ms-request-id": "359012b1-4e5b-41e0-806a-8ad70e7dc900",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153607Z:359012b1-4e5b-41e0-806a-8ad70e7dc900"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg1114?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-7a5ee9f3001a19550c3907009f2e477a-f3a1b968ceafb31d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7b2dbff51d471feea1385c6d2933f5e5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:07 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "2b281276-8d26-4f7e-a2e3-9608b97ae208",
        "x-ms-ratelimit-remaining-subscription-writes": "928",
        "x-ms-request-id": "2b281276-8d26-4f7e-a2e3-9608b97ae208",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153608Z:2b281276-8d26-4f7e-a2e3-9608b97ae208"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114",
        "name": "csmrg1114",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "220",
        "Content-Type": "application/json",
        "traceparent": "00-9840e2067b861016e51e6491ffa46a48-c0c9d3b52ee1d463-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a1b318c6221d45a13334f08082f40dcf",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0ce19ed3-ef06-4ab1-befc-84a4dc987c8b?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1019",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:09 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e9edbe67-72c9-425b-90ce-020236e1a438",
        "x-ms-client-request-id": "a1b318c6221d45a13334f08082f40dcf",
        "x-ms-correlation-request-id": "90d780d4-e2a6-47f6-af15-96e9721d7463",
        "x-ms-ratelimit-remaining-subscription-writes": "927",
        "x-ms-request-id": "0ce19ed3-ef06-4ab1-befc-84a4dc987c8b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153610Z:90d780d4-e2a6-47f6-af15-96e9721d7463"
      },
      "ResponseBody": {
        "name": "azsmnet8979",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979",
        "etag": "W/\"38808a6f-4c3a-4138-8cea-2a39b7f53a61\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "b54b329c-3c25-4e98-949c-f15a6f721ea5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet7865",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979/subnets/azsmnet7865",
              "etag": "W/\"38808a6f-4c3a-4138-8cea-2a39b7f53a61\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0ce19ed3-ef06-4ab1-befc-84a4dc987c8b?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-9840e2067b861016e51e6491ffa46a48-5c29e38756a90572-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "ddbec2db8b0c245d7ca8ec6c47dceb34",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:10 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c8731f60-ce4c-45f6-9f7a-33a2a31eaf80",
        "x-ms-client-request-id": "ddbec2db8b0c245d7ca8ec6c47dceb34",
        "x-ms-correlation-request-id": "79e713e5-f0ea-4a9d-924f-ddf1af923e8e",
        "x-ms-ratelimit-remaining-subscription-reads": "10942",
        "x-ms-request-id": "46a75d4d-10e3-4552-844a-70b71eb7b6b7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153610Z:79e713e5-f0ea-4a9d-924f-ddf1af923e8e"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0ce19ed3-ef06-4ab1-befc-84a4dc987c8b?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-9840e2067b861016e51e6491ffa46a48-6d57c26c938359c4-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0fa4252630cf12f7df3fda9e8624d7b4",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:20 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "22428a75-affb-46a3-929b-703bdc3a59c0",
        "x-ms-client-request-id": "0fa4252630cf12f7df3fda9e8624d7b4",
        "x-ms-correlation-request-id": "6a6044ea-ff3a-4d9b-be2e-e3cb148c2a21",
        "x-ms-ratelimit-remaining-subscription-reads": "10941",
        "x-ms-request-id": "423a4d44-fa17-46e4-b20a-aa6640d977fc",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153621Z:6a6044ea-ff3a-4d9b-be2e-e3cb148c2a21"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-9840e2067b861016e51e6491ffa46a48-1d785ef378ba8023-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c0a542242f36b5c3ed233d0ac8cb2ceb",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1021",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:21 GMT",
        "ETag": "W/\"428ad8bc-9001-44f7-ad31-7cbfe0e9aabb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "535affc6-568c-41ee-947d-c31ff9cebb1d",
        "x-ms-client-request-id": "c0a542242f36b5c3ed233d0ac8cb2ceb",
        "x-ms-correlation-request-id": "0367c2e1-78a3-44e0-865f-516aa40505db",
        "x-ms-ratelimit-remaining-subscription-reads": "10940",
        "x-ms-request-id": "a7f4d8f2-39dc-48da-9d28-7111ba6eb5bb",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153622Z:0367c2e1-78a3-44e0-865f-516aa40505db"
      },
      "ResponseBody": {
        "name": "azsmnet8979",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979",
        "etag": "W/\"428ad8bc-9001-44f7-ad31-7cbfe0e9aabb\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "b54b329c-3c25-4e98-949c-f15a6f721ea5",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet7865",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979/subnets/azsmnet7865",
              "etag": "W/\"428ad8bc-9001-44f7-ad31-7cbfe0e9aabb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619?api-version=2023-02-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "313",
        "Content-Type": "application/json",
        "traceparent": "00-1da2ca6d3f7a9ca738105f8a16d01ac7-6d64419d8d4a748d-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4956679400daaaddcaabfdccb1bf9d57",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "securityRules": [
            {
              "properties": {
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/48fab00e-2a2d-4faa-9dd3-d7c9a076a47f?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "5555",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:23 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f9b04b97-7706-46df-acae-24e3fc06d176",
        "x-ms-client-request-id": "4956679400daaaddcaabfdccb1bf9d57",
        "x-ms-correlation-request-id": "b1d020d9-50b6-4d04-8b93-f860e4809c36",
        "x-ms-ratelimit-remaining-subscription-writes": "926",
        "x-ms-request-id": "48fab00e-2a2d-4faa-9dd3-d7c9a076a47f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153624Z:b1d020d9-50b6-4d04-8b93-f860e4809c36"
      },
      "ResponseBody": {
        "name": "azsmnet1619",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619",
        "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "6cbf904d-3be5-4cac-9fc5-444caaf82def",
          "securityRules": [
            {
              "name": "azsmnet8862",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/securityRules/azsmnet8862",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"203b5786-2b17-4054-b558-b5deceb96f3c\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Updating",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/48fab00e-2a2d-4faa-9dd3-d7c9a076a47f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1da2ca6d3f7a9ca738105f8a16d01ac7-d1ca27d87bb8856d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1f0aef138ecd24d965faf58a31f6042e",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:24 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f34c7e80-7c24-4399-8e57-d700c2dd65ef",
        "x-ms-client-request-id": "1f0aef138ecd24d965faf58a31f6042e",
        "x-ms-correlation-request-id": "6e84e92d-035e-4246-834e-4b1269a56be7",
        "x-ms-ratelimit-remaining-subscription-reads": "10939",
        "x-ms-request-id": "fbefa2fd-7cf4-4a5b-a2fe-b21546ef7d87",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153624Z:6e84e92d-035e-4246-834e-4b1269a56be7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1da2ca6d3f7a9ca738105f8a16d01ac7-43fdb797dbaaa60e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8f39e686268368b4685fe7ebde31b8dd",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5563",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:24 GMT",
        "ETag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c89061f9-a081-49f0-bd82-c995a7200950",
        "x-ms-client-request-id": "8f39e686268368b4685fe7ebde31b8dd",
        "x-ms-correlation-request-id": "71dde472-2ca4-43e1-9f66-b80a7aaab933",
        "x-ms-ratelimit-remaining-subscription-reads": "10938",
        "x-ms-request-id": "d7052ca3-da86-4f4d-8d49-b930dc8ca030",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153625Z:71dde472-2ca4-43e1-9f66-b80a7aaab933"
      },
      "ResponseBody": {
        "name": "azsmnet1619",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619",
        "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "6cbf904d-3be5-4cac-9fc5-444caaf82def",
          "securityRules": [
            {
              "name": "azsmnet8862",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/securityRules/azsmnet8862",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"9433c6ab-f59c-4087-9316-c2d63954186d\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943?api-version=2021-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "1169",
        "Content-Type": "application/json",
        "traceparent": "00-ebbbcdd9b040778c9fbb2a4d681b87bd-20d95b3f07322a98-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7db4c1b94289245e9f3b3574c56aebf3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "tags": {
          "key": "value"
        },
        "properties": {
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619",
            "location": "westus"
          },
          "ipConfigurations": [
            {
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979/subnets/azsmnet7865"
                }
              },
              "name": "azsmnet6978"
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9cce15bb-3596-4987-9291-505f4d5097ee?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1861",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:26 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5fb9c3cf-6a33-41d6-beaf-bd9204b84eb2",
        "x-ms-client-request-id": "7db4c1b94289245e9f3b3574c56aebf3",
        "x-ms-correlation-request-id": "d884c607-74e0-4e4b-ab9a-80a3ceeee068",
        "x-ms-ratelimit-remaining-subscription-writes": "925",
        "x-ms-request-id": "9cce15bb-3596-4987-9291-505f4d5097ee",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153627Z:d884c607-74e0-4e4b-ab9a-80a3ceeee068"
      },
      "ResponseBody": {
        "name": "azsmnet1943",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943",
        "etag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "60f43878-2523-4be4-bf4c-0005e9cf01ef",
          "ipConfigurations": [
            {
              "name": "azsmnet6978",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943/ipConfigurations/azsmnet6978",
              "etag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979/subnets/azsmnet7865"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "tqzexnjfhsme3fe24fng42q4uf.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/9cce15bb-3596-4987-9291-505f4d5097ee?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ebbbcdd9b040778c9fbb2a4d681b87bd-02b1983130ee676d-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "423d47290879f65c315f877832f4997c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:27 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3a470b7e-1a4b-4308-b34f-76a6ca02f4bc",
        "x-ms-client-request-id": "423d47290879f65c315f877832f4997c",
        "x-ms-correlation-request-id": "48489d44-932c-49a7-9537-2533690f926f",
        "x-ms-ratelimit-remaining-subscription-reads": "10937",
        "x-ms-request-id": "7fbea12a-1a0c-419e-a360-779f3569abdb",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153627Z:48489d44-932c-49a7-9537-2533690f926f"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-ebbbcdd9b040778c9fbb2a4d681b87bd-a9c4f8eef0a7dc88-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "ac0beaffa629cd588613c71b9c70de6c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1861",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:27 GMT",
        "ETag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2ef6d552-d21d-451d-b126-d2543893b115",
        "x-ms-client-request-id": "ac0beaffa629cd588613c71b9c70de6c",
        "x-ms-correlation-request-id": "09221d75-13cb-4e7e-8201-fb10f2ad5166",
        "x-ms-ratelimit-remaining-subscription-reads": "10936",
        "x-ms-request-id": "472a9168-ea6e-4990-b49a-cfc605f66732",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153628Z:09221d75-13cb-4e7e-8201-fb10f2ad5166"
      },
      "ResponseBody": {
        "name": "azsmnet1943",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943",
        "etag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "60f43878-2523-4be4-bf4c-0005e9cf01ef",
          "ipConfigurations": [
            {
              "name": "azsmnet6978",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943/ipConfigurations/azsmnet6978",
              "etag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979/subnets/azsmnet7865"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "tqzexnjfhsme3fe24fng42q4uf.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-6ee2cd9ff28ac4ceed82a2d9203059c6-b081d214e2c97535-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7d4b1df9a82d1d7aafbd893165c26ec2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1861",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:28 GMT",
        "ETag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5fcee7e4-7f70-4ef1-822a-a8bedd6b9497",
        "x-ms-client-request-id": "7d4b1df9a82d1d7aafbd893165c26ec2",
        "x-ms-correlation-request-id": "8b6fe547-6e76-43cb-958e-6449e44b6b49",
        "x-ms-ratelimit-remaining-subscription-reads": "10935",
        "x-ms-request-id": "ac99578b-299a-4b38-9664-103d434102be",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153628Z:8b6fe547-6e76-43cb-958e-6449e44b6b49"
      },
      "ResponseBody": {
        "name": "azsmnet1943",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943",
        "etag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
        "tags": {
          "key": "value"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "60f43878-2523-4be4-bf4c-0005e9cf01ef",
          "ipConfigurations": [
            {
              "name": "azsmnet6978",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943/ipConfigurations/azsmnet6978",
              "etag": "W/\"ea2fa54f-b55f-4b35-bae6-22d47b7f2827\"",
              "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
              "properties": {
                "provisioningState": "Succeeded",
                "privateIPAddress": "10.0.0.4",
                "privateIPAllocationMethod": "Dynamic",
                "subnet": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979/subnets/azsmnet7865"
                },
                "primary": true,
                "privateIPAddressVersion": "IPv4"
              }
            }
          ],
          "dnsSettings": {
            "dnsServers": [],
            "appliedDnsServers": [],
            "internalDomainNameSuffix": "tqzexnjfhsme3fe24fng42q4uf.dx.internal.cloudapp.net"
          },
          "vnetEncryptionSupported": false,
          "enableIPForwarding": false,
          "networkSecurityGroup": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619"
          },
          "hostedWorkloads": [],
          "tapConfigurations": [],
          "nicType": "Standard"
        },
        "type": "Microsoft.Network/networkInterfaces",
        "location": "westus"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-d84d236738c86317084d0c0ffa876a0c-f8cb381b276780d2-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5bee2ad4962882efef6fbc6641415ac0",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "5729",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:28 GMT",
        "ETag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e73aedb8-637c-445e-aa54-c3d986f19b03",
        "x-ms-client-request-id": "5bee2ad4962882efef6fbc6641415ac0",
        "x-ms-correlation-request-id": "c05b4993-ad9a-4160-978c-d16819f08dca",
        "x-ms-ratelimit-remaining-subscription-reads": "10934",
        "x-ms-request-id": "f430b847-a820-497b-b469-9357ff5c5ef2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153629Z:c05b4993-ad9a-4160-978c-d16819f08dca"
      },
      "ResponseBody": {
        "name": "azsmnet1619",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619",
        "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
        "type": "Microsoft.Network/networkSecurityGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "6cbf904d-3be5-4cac-9fc5-444caaf82def",
          "securityRules": [
            {
              "name": "azsmnet8862",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/securityRules/azsmnet8862",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Test security rule",
                "protocol": "Tcp",
                "sourcePortRange": "655",
                "destinationPortRange": "123-3500",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "defaultSecurityRules": [
            {
              "name": "AllowVnetInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowVnetInBound",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowAzureLoadBalancerInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowAzureLoadBalancerInBound",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow inbound traffic from azure load balancer",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 65001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllInBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/DenyAllInBound",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all inbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowVnetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowVnetOutBound",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 65000,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "AllowInternetOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/AllowInternetOutBound",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow outbound traffic from all VMs to Internet",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "Internet",
                "access": "Allow",
                "priority": 65001,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            },
            {
              "name": "DenyAllOutBound",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619/defaultSecurityRules/DenyAllOutBound",
              "etag": "W/\"6068cafb-6332-4566-ba20-0ad23363a292\"",
              "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
              "properties": {
                "provisioningState": "Succeeded",
                "description": "Deny all outbound traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 65500,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
              }
            }
          ],
          "networkInterfaces": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces/azsmnet1943?api-version=2021-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-c7ef7410d2461e0011516cae17c5f135-6d78ce69c6bb9813-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "157e1a801ca9574f70edfc6b1d2668c3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/75971464-d5ba-4657-b130-5382b588caa5?api-version=2021-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:36:32 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/75971464-d5ba-4657-b130-5382b588caa5?api-version=2021-04-01",
        "Pragma": "no-cache",
        "Retry-After": "4",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b54e026f-71de-48d2-acbb-41d6c56ffd81",
        "x-ms-client-request-id": "157e1a801ca9574f70edfc6b1d2668c3",
        "x-ms-correlation-request-id": "7724a20f-1fcc-48c7-be6e-cbaa46c71e75",
        "x-ms-ratelimit-remaining-subscription-deletes": "14866",
        "x-ms-request-id": "75971464-d5ba-4657-b130-5382b588caa5",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153633Z:7724a20f-1fcc-48c7-be6e-cbaa46c71e75"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/75971464-d5ba-4657-b130-5382b588caa5?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-c7ef7410d2461e0011516cae17c5f135-40947f828835712f-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4ab1c8635843b818da97eb3b998365c8",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:32 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "9f3e42c5-35ed-48ab-9416-3c13d71a5d6a",
        "x-ms-client-request-id": "4ab1c8635843b818da97eb3b998365c8",
        "x-ms-correlation-request-id": "d0e81bdb-6341-481b-9f3b-be1d62c5f09c",
        "x-ms-ratelimit-remaining-subscription-reads": "10933",
        "x-ms-request-id": "8f7d3f87-7160-4b54-b6a5-f405e67596d7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153633Z:d0e81bdb-6341-481b-9f3b-be1d62c5f09c"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkInterfaces?api-version=2021-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3cc1f807e8fafd3fd61be8e18d916a5c",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "12",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:33 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "b1882bca-6b2d-48c3-8089-2ba6ed93f25e",
        "x-ms-ratelimit-remaining-subscription-reads": "10932",
        "x-ms-request-id": "b1882bca-6b2d-48c3-8089-2ba6ed93f25e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153633Z:b1882bca-6b2d-48c3-8089-2ba6ed93f25e"
      },
      "ResponseBody": {
        "value": []
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/networkSecurityGroups/azsmnet1619?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1b8c86aaa562aeb14e15db325f64837f-0cf61b8520cd87fd-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "54088d111d754c80ec8e96ea9708c9a9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/eb01e22b-8d47-4710-a72d-5886a4620f8f?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:36:33 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/eb01e22b-8d47-4710-a72d-5886a4620f8f?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "1",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a16a8f77-218e-4e70-84ab-5aa8d466ef45",
        "x-ms-client-request-id": "54088d111d754c80ec8e96ea9708c9a9",
        "x-ms-correlation-request-id": "7ce7364b-64db-400c-b6f7-2079c8d28519",
        "x-ms-ratelimit-remaining-subscription-deletes": "14865",
        "x-ms-request-id": "eb01e22b-8d47-4710-a72d-5886a4620f8f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153634Z:7ce7364b-64db-400c-b6f7-2079c8d28519"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/eb01e22b-8d47-4710-a72d-5886a4620f8f?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-1b8c86aaa562aeb14e15db325f64837f-7fa7067fe6fec59a-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0c298e2c107be95278754f6b515466cd",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:34 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "76d67abb-8fb6-4435-88c1-8b9aca490063",
        "x-ms-client-request-id": "0c298e2c107be95278754f6b515466cd",
        "x-ms-correlation-request-id": "ca1abab4-b061-4c4e-a03c-b59f753be1bd",
        "x-ms-ratelimit-remaining-subscription-reads": "10931",
        "x-ms-request-id": "54b23619-b402-4108-a5d6-049021b6e603",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153634Z:ca1abab4-b061-4c4e-a03c-b59f753be1bd"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg1114/providers/Microsoft.Network/virtualNetworks/azsmnet8979?api-version=2023-02-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-26d31ee08d15f3c8c1e7b0eb926d367f-dbe8f03ab6b5374c-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "c77e3e5176db7109198dcbc2aa57dbb5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/650e7e57-67bb-41ec-ade6-6d09d25a6d56?api-version=2023-02-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:36:34 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/650e7e57-67bb-41ec-ade6-6d09d25a6d56?api-version=2023-02-01",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "88189b6d-6076-45b2-9391-aa135b4a0dc2",
        "x-ms-client-request-id": "c77e3e5176db7109198dcbc2aa57dbb5",
        "x-ms-correlation-request-id": "f773b2d8-a410-4e1c-ae0c-73337e348faa",
        "x-ms-ratelimit-remaining-subscription-deletes": "14864",
        "x-ms-request-id": "650e7e57-67bb-41ec-ade6-6d09d25a6d56",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153635Z:f773b2d8-a410-4e1c-ae0c-73337e348faa"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/650e7e57-67bb-41ec-ade6-6d09d25a6d56?api-version=2023-02-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-26d31ee08d15f3c8c1e7b0eb926d367f-fed89ca75b517659-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "32d7a54d62b9b56d84b8f3ed458f3f20",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:36:34 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6f2a2a17-0c30-4db7-a282-9f78459d7a1a",
        "x-ms-client-request-id": "32d7a54d62b9b56d84b8f3ed458f3f20",
        "x-ms-correlation-request-id": "29f80b2a-db50-4f79-a027-f0f2859cc01f",
        "x-ms-ratelimit-remaining-subscription-reads": "10930",
        "x-ms-request-id": "55dea4e9-6fe7-455b-90ba-f4fb75e9ba6f",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T153635Z:29f80b2a-db50-4f79-a027-f0f2859cc01f"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1071701384",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
